--- a/RoboStateResetUtility.csproj
+++ b/RoboStateResetUtility.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Resource Include="Fonts\VT323-Regular.ttf" />
+  </ItemGroup>
+
 </Project>
